--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,6 +13,7 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.89.0",
+    "sass-loader": "^16.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
