--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.11",
     "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
     "web-vitals": "^2.1.4"
