--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-window": "^1.8.11",
     "sass": "^1.89.1",
     "sass-loader": "^16.0.5",
+    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
